--- a/Hivemind/Hivemind.csproj
+++ b/Hivemind/Hivemind.csproj
@@ -30,5 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Fonts\" />
+    <Folder Include="Content\Tiles\Wall\Cinderblock\" />
+    <Folder Include="Content\Tiles\Wall\Dirt\" />
   </ItemGroup>
 </Project>
